chore: Update dependencies and add Tailwind CSS configuration

--- a/src/output.css
+++ b/src/output.css
@@ -2804,6 +2804,11 @@ video {
   color: hsl(var(--nextui-default-300) / var(--nextui-default-300-opacity, var(--tw-text-opacity)));
 }
 
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
