--- a/src/output.css
+++ b/src/output.css
@@ -1025,6 +1025,10 @@ video {
   height: 6rem;
 }
 
+.h-56 {
+  height: 14rem;
+}
+
 .max-h-64 {
   max-height: 16rem;
 }
@@ -1201,6 +1205,10 @@ video {
 
 .w-\[200px\] {
   width: 200px;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .min-w-10 {
