--- a/src/output.css
+++ b/src/output.css
@@ -704,6 +704,30 @@ video {
   top: var(--navbar-height);
 }
 
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-8 {
+  top: 2rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.top-9 {
+  top: 2.25rem;
+}
+
+.top-6 {
+  top: 1.5rem;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
 .-z-30 {
   z-index: -30;
 }
@@ -1029,6 +1053,10 @@ video {
   height: 14rem;
 }
 
+.h-\[113px\] {
+  height: 113px;
+}
+
 .max-h-64 {
   max-height: 16rem;
 }
@@ -1209,6 +1237,22 @@ video {
 
 .w-20 {
   width: 5rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-52 {
+  width: 13rem;
+}
+
+.w-\[50\] {
+  width: 50;
 }
 
 .min-w-10 {
@@ -2617,6 +2661,11 @@ video {
   line-height: 2rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-medium {
   font-weight: 500;
 }
@@ -2837,6 +2886,21 @@ video {
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+
+.text-foreground-700 {
+  --tw-text-opacity: 1;
+  color: hsl(var(--nextui-foreground-700) / var(--nextui-foreground-700-opacity, var(--tw-text-opacity)));
+}
+
+.text-foreground-900 {
+  --tw-text-opacity: 1;
+  color: hsl(var(--nextui-foreground-900) / var(--nextui-foreground-900-opacity, var(--tw-text-opacity)));
 }
 
 .underline {
@@ -4599,6 +4663,10 @@ video {
   --tw-scale-x: 1.25;
   --tw-scale-y: 1.25;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
 }
 
 .hover\:border-default:hover {
